setup: build, ts

--- a/package.json
+++ b/package.json
@@ -2,5 +2,24 @@
   "name": "git-chat",
   "version": "0.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "electron": "^7.1.7",
+    "html-webpack-plugin": "^3.2.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "typescript": "^3.7.4"
+  },
+  "scripts": {
+    "build": "webpack --config ./webpack.config.js",
+    "start": "yarn build && electron ./dist/electron.js",
+    "start-react": "yarn build --watch"
+  },
+  "dependencies": {
+    "ts-loader": "^6.2.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
+  }
 }
