--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/styled-components": "^4.4.2",
     "electron": "^7.1.7",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.12.0",
@@ -18,6 +19,7 @@
     "start-react": "yarn build --watch"
   },
   "dependencies": {
+    "styled-components": "^4.4.1",
     "ts-loader": "^6.2.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
