--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "start-react": "yarn build --watch"
   },
   "dependencies": {
+    "effector": "^20.9.1",
+    "effector-react": "^20.6.0",
     "styled-components": "^4.4.1",
     "ts-loader": "^6.2.1",
     "webpack": "^4.41.5",
