--- a/package.json
+++ b/package.json
@@ -4,14 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@types/antd": "^1.0.0",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.2",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
+    "css-loader": "^3.4.2",
     "electron": "^7.1.7",
     "html-webpack-plugin": "^3.2.0",
+    "less-loader": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "typescript": "^3.7.4"
+    "style-loader": "^1.1.2",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.4",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "scripts": {
     "build": "webpack --config ./webpack.config.js",
@@ -19,12 +30,10 @@
     "start-react": "yarn build --watch"
   },
   "dependencies": {
+    "antd": "^3.26.7",
     "effector": "^20.9.1",
     "effector-react": "^20.6.0",
     "react-icons-kit": "^1.3.1",
-    "styled-components": "^4.4.1",
-    "ts-loader": "^6.2.1",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "styled-components": "^4.4.1"
   }
 }
