--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@types/antd": "^1.0.0",
+    "@types/mousetrap": "^1.6.3",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.2",
@@ -33,6 +34,7 @@
     "antd": "^3.26.7",
     "effector": "^20.9.1",
     "effector-react": "^20.6.0",
+    "mousetrap": "^1.6.3",
     "react-icons-kit": "^1.3.1",
     "styled-components": "^4.4.1"
   }
