feat: commit to repo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "strictNullChecks": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "src"
   }
 }
