--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "babel-plugin-import": "^1.13.0",
     "css-loader": "^3.4.2",
     "electron": "^7.1.7",
+    "eslint": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "style-loader": "^1.1.2",
     "ts-loader": "^6.2.1",
+    "tslint": "^6.0.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^4.2.0",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
