--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@types/antd": "^1.0.0",
+    "@types/express": "^4.17.2",
     "@types/mousetrap": "^1.6.3",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
@@ -33,14 +34,16 @@
   "scripts": {
     "build": "webpack --config ./webpack.config.js",
     "start": "yarn build && electron ./dist/electron.js",
-    "start-react": "yarn build --watch"
+    "start-render": "yarn build --watch"
   },
   "dependencies": {
     "antd": "^3.26.7",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "effector": "^20.9.1",
     "effector-react": "^20.6.0",
+    "express": "^4.17.1",
     "mousetrap": "^1.6.3",
-    "react-icons-kit": "^1.3.1",
     "styled-components": "^4.4.1"
   }
 }
