--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --config ./webpack.config.js",
     "start": "yarn build && electron ./app/main.js",
     "start-watch": "yarn build --watch",
-    "pack-app": "yarn build && yarn electron-packager ./app git-jedi"
+    "pack-app": "yarn electron-packager ./app git-jedi",
+    "pack-app-full": "yarn build && yarn pack-app"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -28,6 +29,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^5.0.0",
+    "pkg": "^4.4.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "style-loader": "^1.1.2",
@@ -48,5 +50,8 @@
     "express": "^4.17.1",
     "mousetrap": "^1.6.3",
     "styled-components": "^4.4.1"
+  },
+  "pkg": {
+    "assets": "node_modules/**/*"
   }
 }
