--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "license": "MIT",
   "main": "main.js",
   "scripts": {
+    "pack-git-editor": "yarn pkg ./app/git-editor.js --out-path ./app",
     "build": "webpack --config ./webpack.config.js",
-    "start": "yarn build && electron ./app/main.js",
-    "start-watch": "yarn build --watch",
+    "start": "yarn build && yarn pack-git-editor && electron ./app/main.js",
+    "watch": "yarn build --watch",
     "pack-app": "yarn electron-packager ./app git-jedi",
-    "pack-app-full": "yarn build && yarn pack-app",
-    "pack-git-editor": "yarn pkg ./app/git-editor.js --out-path ./app"
+    "pack-app-full": "yarn build && yarn pack-git-editor && yarn pack-app"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -17,6 +17,7 @@
     "@types/antd": "^1.0.0",
     "@types/express": "^4.17.2",
     "@types/mousetrap": "^1.6.3",
+    "@types/object-hash": "^1.3.1",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.2",
@@ -50,6 +51,7 @@
     "effector-react": "^20.6.0",
     "express": "^4.17.1",
     "mousetrap": "^1.6.3",
+    "object-hash": "^2.0.2",
     "styled-components": "^4.4.1"
   },
   "pkg": {
