--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@types/antd": "^1.0.0",
+    "@types/diff": "^4.0.2",
     "@types/express": "^4.17.2",
     "@types/mousetrap": "^1.6.3",
     "@types/object-hash": "^1.3.1",
@@ -47,6 +48,7 @@
     "antd": "^3.26.7",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "diff": "^4.0.2",
     "effector": "^20.9.1",
     "effector-react": "^20.6.0",
     "express": "^4.17.1",
