--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.2",
+    "@types/uuid": "^3.4.7",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
     "copy-webpack-plugin": "^5.1.1",
@@ -54,7 +55,8 @@
     "express": "^4.17.1",
     "mousetrap": "^1.6.3",
     "object-hash": "^2.0.2",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "uuid": "^7.0.0"
   },
   "pkg": {
     "assets": "node_modules/**/*"
